🐛Fixed a bug that prevented tools that were too high in the dashboard from being seen

--- a/src/components/column/column.styles.scss
+++ b/src/components/column/column.styles.scss
@@ -1,13 +1,17 @@
 @import "../../design/variables";
 
 .dashboard-column {
-  text-align: center;
+  position: relative;
+  .test-space {
+    height: 20vh
+  }
+  
+  .columns-styling {
+    overflow: scroll;
+    height: 105vh;
 
-
-  .column-title{
-    font-size: 16px;
-    font-weight: 200;
-    text-transform: uppercase
+    position: relative;
+    margin-top: 20vh;
   }
 
   .droppable-space{
