--- a/src/pages/dashboard/dashboard.styles.scss
+++ b/src/pages/dashboard/dashboard.styles.scss
@@ -7,8 +7,7 @@
   .columns-container {
     position: absolute;
     width: 100vw;
-    height: 90vh;
-    overflow: scroll;
+    height: 85vh;
     display: flex;
     justify-content: space-around;
     align-items: stretch;
